--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>jQuery Game</title>
 </head>
 <body>
-    
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>Crystals Collector</h1>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-12">
+                <p>You will be given a random number at the start of the game.</p>
+                <p>There are four crystals below. By clicking on a crystal you will add a specific number of points to your total score.</p>
+                <p>You will win the game by matching your total score to the random number.</p>
+                <p>The value of each crystal is hidden from you until you click on it</p>
+                <p>Each time the game starts, the game will change the value of each crystal</p>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-3">
+                <h3>Number:<span id="computer-number"></span></h3>
+            </div>
+            <div class="col-sm-6">
+                <h3>Wins: <span id="wins"></span></h3>
+                <h3>Losses: <span id="losses"></span></h3>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+
+            <div class="col-lg-3">
+                <img src="assets/images/blue diamond.png" alt="Blue Diamond" class="gem-button">
+                <img src="assets/images/blue-gem.png" alt="Blue Gem" class="gem-button">
+            </div>
+
+            <div class="col-sm-3">
+                <img src="assets/images/green gem.png" alt="Green Gem" class="gem-button">
+                <img src="assets/images/red-gem.png" alt="Red Gem" class="gem-button">
+            </div>
+
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-3">
+                <h3>Your total score is:<span id="total-score"></span></h3>
+            </div>
+        </div>
+
+        <div class="row top-buffer">
+            <div class="col-sm-3">
+                <h3>Current Score:<span id="current-score"></span></h3>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
