--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <div class="row top-buffer">
             <div class="col-sm-12">
-                <p>You will be given a random number at the start of the game.</p>
-                <p>There are four crystals below. By clicking on a crystal you will add a specific number of points to your total score.</p>
-                <p>You will win the game by matching your total score to the random number.</p>
+                <p>You will be given a random number at the start of the game</p>
+                <p>There are four crystals below. By clicking on a crystal you will add a specific number of points to your total score</p>
+                <p>You will win the game by matching your total score to the random number. You lose the game if your total score goes above the random number</p>
                 <p>The value of each crystal is hidden from you until you click on it</p>
                 <p>Each time the game starts, the game will change the value of each crystal</p>
             </div>
@@ -41,29 +41,37 @@
         <div class="row top-buffer">
 
             <div class="col-lg-3">
-                <img src="assets/images/blue diamond.png" alt="Blue Diamond" class="gem-button">
-                <img src="assets/images/blue-gem.png" alt="Blue Gem" class="gem-button">
+                <img src="assets/images/blue diamond.png" alt="Blue Diamond" class="gem-button" id="crystal1">
+                <img src="assets/images/blue-gem.png" alt="Blue Gem" class="gem-button" id="crystal2">
             </div>
 
             <div class="col-sm-3">
-                <img src="assets/images/green gem.png" alt="Green Gem" class="gem-button">
-                <img src="assets/images/red-gem.png" alt="Red Gem" class="gem-button">
+                <img src="assets/images/green gem.png" alt="Green Gem" class="gem-button" id="crystal3">
+                <img src="assets/images/red-gem.png" alt="Red Gem" class="gem-button" id="crystal4">
             </div>
 
         </div>
 
         <div class="row top-buffer">
             <div class="col-sm-3">
-                <h3>Your total score is:<span id="total-score"></span></h3>
+                <h3>Your total score is:<span id="current-score"></span></h3>
             </div>
         </div>
 
-        <div class="row top-buffer">
+        <!-- <div class="row top-buffer">
             <div class="col-sm-3">
                 <h3>Current Score:<span id="current-score"></span></h3>
             </div>
-        </div>
+        </div> -->
 
     </div>
+
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+
 </body>
 </html>
