--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>jQuery Game</title>
 </head>
 <body>
 
-    <div class="container">
+    <div class="container-fluid" id="main-content">
 
         <div class="row">
             <div class="col-sm-12">
@@ -19,7 +20,7 @@
         </div>
 
         <div class="row top-buffer">
-            <div class="col-sm-12">
+            <div class="col-lg-12">
                 <p>You will be given a random number at the start of the game</p>
                 <p>There are four crystals below. By clicking on a crystal you will add a specific number of points to your total score</p>
                 <p>You will win the game by matching your total score to the random number. You lose the game if your total score goes above the random number</p>
@@ -32,9 +33,13 @@
             <div class="col-sm-3">
                 <h3>Number:<span id="computer-number"></span></h3>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 <h3>Wins: <span id="wins"></span></h3>
                 <h3>Losses: <span id="losses"></span></h3>
+            </div>
+
+            <div class="col-sm-6">
+                <img src="assets/images/tenor.gif" id="side-img">
             </div>
         </div>
 
@@ -45,7 +50,7 @@
                 <img src="assets/images/blue-gem.png" alt="Blue Gem" class="gem-button" id="crystal2">
             </div>
 
-            <div class="col-sm-3">
+            <div class="col-lg-3">
                 <img src="assets/images/green gem.png" alt="Green Gem" class="gem-button" id="crystal3">
                 <img src="assets/images/red-gem.png" alt="Red Gem" class="gem-button" id="crystal4">
             </div>
